--- a/reachy-mini/docker-compose.yml
+++ b/reachy-mini/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - CUDA_VISIBLE_DEVICES=0
       - HF_TOKEN=${HF_TOKEN}  # Set your Hugging Face token in .env file or export it
       # SET THIS IN YOUR DOCKER-COMPOSE ENVIRONMENT:
+      #- VLLM_ATTENTION_BACKEND=FLASH_ATTN
       - VLLM_ATTENTION_BACKEND=FLASHINFER
     deploy:
       resources:
@@ -28,6 +29,7 @@ services:
             - driver: nvidia
               count: all
               capabilities: [gpu]
+    # RedHatAI/Qwen2.5-VL-7B-Instruct-quantized.w4a16
     command: >
       sh -c "
       rm -rf ./videos/*.jpg &&
@@ -35,22 +37,49 @@ services:
       hf auth login --token ${HF_TOKEN} --add-to-git-credential &&
       hf download ${MODEL_ID} --cache-dir /root/.cache/huggingface &&
       vllm serve ${MODEL_ID}
-      --kv-cache-dtype fp8
-      --max-num-seqs 1024
-      --max-num-batched-tokens 8192
-      --max-model-len 16384
-      --tensor-parallel-size 1 
-      --gpu-memory-utilization 0.4
-      --enable-prefix-caching 
-      --enable-chunked-prefill 
-      --host 0.0.0.0 
-      --trust-remote-code 
-      --enable-auto-tool-choice
-      --tool-call-parser llama3_json
-      --disable-fastapi-docs 
-      --download-dir /data/models/huggingface 
-      --port 8100
+      --host 0.0.0.0 \
+      --port 8100 \
+      --dtype auto \
+      --max-num-seqs 9 \
+      --tensor-parallel-size 1 \
+      --pipeline-parallel-size 1 \
+      --cpu-offload-gb 0 \
+      --swap-space 0 \
+      --gpu-memory-utilization 0.25 \
+      --enable-prefix-caching \
+      --enable-chunked-prefill \
+      --disable-fastapi-docs \
+      --enable-auto-tool-choice \
+      --max-model-len 16384 \
+      --max-num-batched-tokens 2048 \
+      --enable-force-include-usage \
+      --tool-call-parser hermes \
+      --enforce-eager \
+      --quantization compressed-tensors \
+      --limit-mm-per-prompt '{\"images\": 1, \"videos\": 1, \"audios\": 1}' \
+      --trust-remote-code \
+      --mm-processor-kwargs '{\"use_fast\": true}'
       "
+
+    # Qwen/Qwen2.5-VL-7B-Instruct           
+    # command: >
+    #   sh -c "
+    #   rm -rf ./videos/*.jpg &&
+    #   rm -rf ./recordings/*.wav &&
+    #   hf auth login --token ${HF_TOKEN} --add-to-git-credential &&
+    #   hf download ${MODEL_ID} --cache-dir /root/.cache/huggingface &&
+    #   vllm serve ${MODEL_ID}
+    #   --host 0.0.0.0 \
+    #   --port 8100 \
+    #   --trust-remote-code \
+    #   --tensor-parallel-size 1 \
+    #   --max-model-len 16384 \
+    #   --gpu-memory-utilization 0.25 \
+    #   --enforce-eager \
+    #   --limit-mm-per-prompt '{\"image\": 5, \"video\": 2}' \
+    #   --enable-auto-tool-choice \
+    #   --tool-call-parser hermes
+    #   "
     volumes:
       - ./data/huggingface_cache:/root/.cache/huggingface  # Cache models locally
       - ./vllm-metadata:/root/.vllm
