updated qq memory with local embeddings

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ reachy-mini/data/*
 reachy-mini/logs/*
 reachy-mini/recordings/*
 reachy-mini/videos/*
+qq/memory/notes.md
+qq/logs/notes_agent.log
