--- a/qq/pyproject.toml
+++ b/qq/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "pydantic>=2.0",
     "python-dotenv>=1.0",
     "pyyaml>=6.0",
+    "pymongo>=4.0",
+    "neo4j>=5.0",
 ]
 
 [project.optional-dependencies]
@@ -18,6 +20,8 @@ dev = ["pytest>=8.0"]
 
 [project.scripts]
 qq = "qq:main"
+qq-memory = "qq.memory_status:main"
+qq-test = "qq.test_systems:main"
 
 [build-system]
 requires = ["hatchling"]
