--- a/qq/pyproject.toml
+++ b/qq/pyproject.toml
@@ -14,10 +14,11 @@ dependencies = [
     "neo4j>=5.0",
     "gliner>=0.1.0",
     "strands-agents>=1.24.0",
+    "markitdown[all]>=0.0.1",
+    "fastmcp>=2.0",
 ]
 
 [project.optional-dependencies]
-mcp = ["fastmcp>=2.0"]
 dev = ["pytest>=8.0"]
 
 [project.scripts]
